syntax = "proto3";

option go_package = "messanger-test/protocol";

package protocol;

message Ping {
  string message = 1;
}

enum StatusCode {
  success = 0;
  userNameUsed = 1;
  wrongPasswordOrLogin = 2;
}

message RegisterRequest {
  // @gotags: db:"username"
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  StatusCode status = 1;
  string token = 2;
}

message AuthRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  StatusCode status = 1;
  string token = 2;
}

service Auth {
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc Auth (AuthRequest) returns (AuthResponse) {}

  rpc PingRequest (Ping) returns (Ping) {}
  rpc PingStream (Ping) returns (stream Ping) {}
}

service Messenger {
  rpc PingRequest (Ping) returns (Ping) {}
  rpc PingStream (Ping) returns (stream Ping) {}
}